--- a/templates/EditSite.html
+++ b/templates/EditSite.html
@@ -52,8 +52,8 @@
     </form>
     <ul class="nav menu">
         <li class="active"><a href="/admin/index/"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"/></svg> Index</a></li>
+        <li><a href="/admin/waflog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> log record</a></li>
         <li><a href="/admin/user/"><svg class="glyph stroked male user "><use xlink:href="#stroked-male-user"/></svg> Users</a></li>
-        <li><a href="/admin/site/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> Site Manager</a></li>
         <li class="parent ">
             <a href="#">
                 <span data-toggle="collapse" href="#sub-item-1"><svg class="glyph stroked lock"><use xlink:href="#stroked-lock"/></svg></span> Waf Rules
