--- a/templates/user.html
+++ b/templates/user.html
@@ -48,9 +48,9 @@
 	</form>
 	<ul class="nav menu">
 		<li><a href="/admin/index/"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"/></svg> Index</a></li>
+		<li><a href="/admin/waflog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> log record</a></li>
 		<li class="active"><a href="/admin/user/"><svg class="glyph stroked male user "><use xlink:href="#stroked-male-user"/></svg> Users</a></li>
-		<li><a href="/admin/site/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> Site Manager</a></li>
-		<li><a href="/admin/rule/"><svg class="glyph stroked lock"><use xlink:href="#stroked-lock"/></svg> WAF rules</a></li>
+	<li><a href="/admin/rule/"><svg class="glyph stroked lock"><use xlink:href="#stroked-lock"/></svg> WAF rules</a></li>
 
 		<li role="presentation" class="divider"></li>
 	</ul>
