--- a/templates/waflog.html
+++ b/templates/waflog.html
@@ -1,22 +1,26 @@
+<!--
+ * @Descripttion: 
+ * @version: 
+ * @Author: seaslog
+ * @Date: 2022-04-27 16:11:54
+ * @LastEditors: 谢余华
+ * @LastEditTime: 2022-04-27 17:09:00
+-->
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>waf admin</title>
-
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/datepicker3.css" rel="stylesheet">
 	<link href="/css/bootstrap-table.css" rel="stylesheet">
 	<link href="/css/styles.css" rel="stylesheet">
-
 	<!--Icons-->
 	<script src="/js/lumino.glyphs.js"></script>
-
 	<!--[if lt IE 9]>
 	<script src="/js/html5shiv.js"></script>
 	<script src="/js/respond.min.js"></script>
 	<![endif]-->
-
 </head>
 
 <body>
@@ -29,7 +33,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/admin/"><span>xsec waf</span>Admin</a>
+			<a class="navbar-brand" href="#"><span>xsec waf</span>Admin</a>
 			<ul class="user-menu">
 				<li class="dropdown pull-right">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> User <span class="caret"></span></a>
@@ -40,6 +44,7 @@
 				</li>
 			</ul>
 		</div>
+
 	</div><!-- /.container-fluid -->
 </nav>
 
@@ -51,68 +56,74 @@
 	</form>
 	<ul class="nav menu">
 		<li><a href="/admin/index/"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"/></svg> Index</a></li>
-		<li><a href="/admin/waflog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> log record</a></li>
-		<li><a href="/admin/user/"><svg class="glyph stroked male user "><use xlink:href="#stroked-male-user"/></svg> Users</a></li>
-	<li class="active"><a href="/admin/rule/"><svg class="glyph stroked lock"><use xlink:href="#stroked-lock"/></svg> WAF rules</a></li>
+		<li  class="active"><a href="/admin/waflog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> log record</a></li>
+		<li ><a href="/admin/user/"><svg class="glyph stroked male user "><use xlink:href="#stroked-male-user"/></svg> Users</a></li>
+		<li><a href="/admin/rule/"><svg class="glyph stroked lock"><use xlink:href="#stroked-lock"/></svg> WAF rules</a></li>
+
 		<li role="presentation" class="divider"></li>
 	</ul>
-
 </div><!--/.sidebar-->
+
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
 	<div class="row">
 		<ol class="breadcrumb">
 			<li><a href="#"><svg class="glyph stroked home"><use xlink:href="#stroked-home"></use></svg></a></li>
-			<li class="active">waf rules</li>
+			<li class="active">Users</li>
 		</ol>
 	</div><!--/.row-->
+
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">waf rules</h1>
+			<h1 class="page-header">wafLog List</h1>
 		</div>
 	</div><!--/.row-->
 
 	<div class="row">
 		<div class="col-lg-12">
-			<div class="panel">
-				<div class="panel-heading">
-					<a href="/admin/rule/sync/" class="btn btn-large btn-primary btn-block">同步全部策略</a>
-				</div>
-				<h2>{{.Flash.SuccessMsg}}</h2>
+			<div class="panel panel-default">
 				<div class="panel-body">
-					{{range $ruleEN, $ruleCN := .RuleInfo}}
 					<table  align="center" class="table table-hover table-bordered">
 						<thead>
 						<tr align="center">
 							<th>ID</th>
-							<th>Rule</th>
-							<th colspan="2"><a href="/admin/rule/new/{{$ruleEN}}" class="btn btn-primary btn-block">新增{{$ruleCN}}</a></th>
+							<th>client_ip</th>
+							<th>local_time</th>
+							<th>server_name</th>
+							<th>user_agent</th>
+							<th>attack_type</th>
+							<th>req_url</th>
+							<th>req_data</th>
+							<th>rule_tag</th>
 						</tr>
-						{{range index $.Rules $ruleEN }}
+						{{range .waflog}}
 						<tr>
 							<td>{{.Id}}</td>
-							<td>{{.RuleItem}}</td>
-							<td><a href="/admin/rule/edit/{{.Id}}">edit</a></td>
-							<td><a href="/admin/rule/del/{{.Id}}">del</a></td>
+							<td>{{.ClientIp}}</td>
+							<td>{{.LocalTime}}</td>
+							<td>{{.ServerName}}</td>
+							<td>{{.UserAgent}}</td>
+							<td>{{.AttackType}}</td>
+							<td>{{.ReqUrl}}</td>
+							<td>{{.ReqData}}</td>
+							<td>{{.RuleTag}}</td>
 						</tr>
 						{{end}}
 						</thead>
 					</table>
-					{{end}}
 				</div>
 			</div>
 		</div>
+	</div><!--/.main-->
 
-</div><!--/.main-->
-
-<script src="/js/jquery-1.11.1.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/chart.min.js"></script>
-<script src="/js/chart-data.js"></script>
-<script src="/js/easypiechart.js"></script>
-<script src="/js/easypiechart-data.js"></script>
-<script src="/js/bootstrap-datepicker.js"></script>
-<script src="/js/bootstrap-table.js"></script>
-<script>
+	<script src="/js/jquery-1.11.1.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/chart.min.js"></script>
+	<script src="/js/chart-data.js"></script>
+	<script src="/js/easypiechart.js"></script>
+	<script src="/js/easypiechart-data.js"></script>
+	<script src="/js/bootstrap-datepicker.js"></script>
+	<script src="/js/bootstrap-table.js"></script>
+	<script>
 		!function ($) {
 			$(document).on("click","ul.nav li.parent > a > span.icon", function(){
 				$(this).find('em:first').toggleClass("glyphicon-minus");
