--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>waf admin</title>
+    <title>防火墙后台</title>
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/datepicker3.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
         <div class="login-panel panel panel-default">
-            <div class="panel-heading" align="center">xsec waf log in</div>
+            <div class="panel-heading" align="center">waf log in</div>
             <div class="panel-body">
                 <form role="form" action="/login/" method="post">
                     <fieldset>
