--- a/templates/typelog.html
+++ b/templates/typelog.html
@@ -1,3 +1,27 @@
+<!--
+ * @Descripttion: 
+ * @version: 
+ * @Author: seaslog
+ * @Date: 2022-04-30 15:51:16
+ * @LastEditors: 谢余华
+ * @LastEditTime: 2022-04-30 16:07:49
+-->
+<!--
+ * @Descripttion: 
+ * @version: 
+ * @Author: seaslog
+ * @Date: 2022-04-30 15:34:41
+ * @LastEditors: 谢余华
+ * @LastEditTime: 2022-04-30 15:51:11
+-->
+<!--
+ * @Descripttion: 
+ * @version: 
+ * @Author: seaslog
+ * @Date: 2022-04-27 16:11:54
+ * @LastEditors: 谢余华
+ * @LastEditTime: 2022-04-27 17:09:00
+-->
 <html>
 <head>
 	<meta charset="utf-8">
@@ -48,12 +72,13 @@
 	</form>
 	<ul class="nav menu">
 		<li><a href="/admin/index/"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"/></svg> Index</a></li>
-		<li><a href="/admin/typelog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> type record</a></li>
-		<li><a href="/admin/iplog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> ip record</a></li>
 		
+		
+		<li  class="active"><a href="/admin/typelog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> type record</a></li>
+		<li ><a href="/admin/iplog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> ip record</a></li>
 		<li><a href="/admin/waflog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> log record</a></li>
-		<li class="active"><a href="/admin/user/"><svg class="glyph stroked male user "><use xlink:href="#stroked-male-user"/></svg> Users</a></li>
-	<li><a href="/admin/rule/"><svg class="glyph stroked lock"><use xlink:href="#stroked-lock"/></svg> WAF rules</a></li>
+		<li ><a href="/admin/user/"><svg class="glyph stroked male user "><use xlink:href="#stroked-male-user"/></svg> Users</a></li>
+		<li><a href="/admin/rule/"><svg class="glyph stroked lock"><use xlink:href="#stroked-lock"/></svg> WAF rules</a></li>
 
 		<li role="presentation" class="divider"></li>
 	</ul>
@@ -69,34 +94,27 @@
 
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">User List</h1>
+			<h1 class="page-header">TypeLog List</h1>
 		</div>
 	</div><!--/.row-->
 
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="panel panel-default">
-				<div class="panel-heading">
-					<a href="/admin/user/new/" class="btn btn-large btn-primary btn-block">新增用户</a>
-				</div>
 				<div class="panel-body">
 					<table  align="center" class="table table-hover table-bordered">
 						<thead>
 						<tr align="center">
-							<th>ID</th>
-							<th>UserName</th>
-							<th>Password</th>
-							<th colspan="2">管理</th>
+							<th>类型</th>
+							<th>次数</th>
 						</tr>
-						{{range .users}}
+						{{range .typelogs}}
 						<tr>
-							<td>{{.Id}}</td>
-							<td>{{.UserName}}</td>
-							<td>{{.Password}}</td>
-							<td><a href="/admin/user/edit/{{.Id}}">edit</a></td>
-							<td><a href="/admin/user/del/{{.Id}}">del</a></td>
+							<td>{{.AttackType}}</td>
+							<td>{{.Num}}</td>
 						</tr>
 						{{end}}
+						
 						</thead>
 					</table>
 				</div>
