--- a/templates/waflog.html
+++ b/templates/waflog.html
@@ -4,13 +4,13 @@
  * @Author: seaslog
  * @Date: 2022-04-27 16:11:54
  * @LastEditors: 谢余华
- * @LastEditTime: 2022-04-27 17:09:00
+ * @LastEditTime: 2022-04-30 16:00:15
 -->
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>waf admin</title>
+	<title>防火墙后台</title>
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/datepicker3.css" rel="stylesheet">
 	<link href="/css/bootstrap-table.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><span>xsec waf</span>Admin</a>
+			<a class="navbar-brand" href="#"><span>waf</span>防火墙后台</a>
 			<ul class="user-menu">
 				<li class="dropdown pull-right">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> User <span class="caret"></span></a>
@@ -56,6 +56,10 @@
 	</form>
 	<ul class="nav menu">
 		<li><a href="/admin/index/"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"/></svg> Index</a></li>
+		<li><a href="/admin/typelog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> type record</a></li>
+		<li><a href="/admin/iplog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> ip record</a></li>
+		
+		
 		<li  class="active"><a href="/admin/waflog/"><svg class="glyph stroked desktop"><use xlink:href="#stroked-desktop"/></svg> log record</a></li>
 		<li ><a href="/admin/user/"><svg class="glyph stroked male user "><use xlink:href="#stroked-male-user"/></svg> Users</a></li>
 		<li><a href="/admin/rule/"><svg class="glyph stroked lock"><use xlink:href="#stroked-lock"/></svg> WAF rules</a></li>
