--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
         <div class="login-panel panel panel-default">
-            <div class="panel-heading" align="center">waf log in</div>
+            <div class="panel-heading" align="center">防火墙后台</div>
             <div class="panel-body">
                 <form role="form" action="/login/" method="post">
                     <fieldset>
